--- a/4.0.0/css/skeleton.css
+++ b/4.0.0/css/skeleton.css
@@ -1064,6 +1064,7 @@ img,
     padding: 10px;
     border: solid lightgray;
     border-width: 0 1px 1px 1px;
+    background-color: white;
 }
 
 .panel .panel-footer {
