--- a/resources/4.0.0/css/skeleton.css
+++ b/resources/4.0.0/css/skeleton.css
@@ -469,6 +469,7 @@ th {
 .columns {
   width: 100%;
   float: left;
+  margin-bottom: 2rem;
   box-sizing: border-box; }
 
 /* For devices larger than 400px */
@@ -1105,6 +1106,10 @@ img,
 .panel.primary .panel-header,
 .panel.primary .panel-body,
 .panel.primary .panel-footer { border-color: dodgerblue; }
+
+.container.fluid {
+    max-width: none;
+}
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
